--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-loader-spinner": "^4.0.0",
     "swr": "^1.0.1"
   },
   "devDependencies": {
