--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "cy:run:chrome": "cypress run --browser chrome",
+    "cy:run:firefox": "cypress run --browser firefox"
   },
   "dependencies": {
     "axios": "^0.23.0",
@@ -20,6 +24,7 @@
   },
   "devDependencies": {
     "@types/react": "17.0.31",
+    "cypress": "^8.6.0",
     "eslint": "8.0.1",
     "eslint-config-next": "11.1.2",
     "typescript": "4.4.4"
